# NewsRAG

./: .gitignore  README.md  app.py.bak  ingest_data.py.bak  pyproject.toml  requirements.txt
src/application/: pipeline.py
src/config/: settings.py
src/domain/: entities.py  interfaces.py
src/infrastructure/: api_client.py  database.py  embeddings.py  llm_service.py
src/ui/: main.py
tests/: basic_test.py  test_db.py  test_integration_guardian.py
